# FantasyFootballSmasher

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
ffs/: career.py  cli.py  config.py  draft.py  ingest.py  lineup.py  matchups.py  projections.py  scoring.py  sos.py
