[project]
name = "ffs"
version = "0.1.0"
description = "Fantasy Football Smasher"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=15.0",
    "nflreadpy>=0.1.5",
    "duckdb>=1.0",
    "typer>=0.12",
]

[project.scripts]
ffs = "ffs.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ffs"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]
